solved layout issues with ultrawide screens for main page, footer and header components

--- a/components/company-motto/company-motto.module.css
+++ b/components/company-motto/company-motto.module.css
@@ -38,6 +38,7 @@
 @media (min-width: 900px) {
   .CompanyMotto {
     flex-direction: row;
+    justify-content: space-between;
 
     gap: 0;
   }
