--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -67,3 +67,16 @@
     max-width: 380px;
   }
 }
+
+/* WS Monitors */
+@media (min-width: 1285px) {
+  .wrapper {
+    max-width: 1110px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+
+    display: flex;
+    justify-content: flex-start;
+  }
+}
