--- a/components/layout/header.module.css
+++ b/components/layout/header.module.css
@@ -64,3 +64,12 @@
     margin-right: unset;
   }
 }
+
+/* WS Monitors */
+@media (min-width: 1285px) {
+  .Header > * {
+    max-width: 1110px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
